Navbar without icons

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,6 +14,7 @@
 			{{ encore_entry_script_tags('app') }}
 		{% endblock %}
 	</head>
+	{% include '_navbar.html.twig' %}
 	<body>
 		{% block body %}{% endblock %}
 	</body>
