--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -1,7 +1,37 @@
 @import 'variables.scss';
 
-body {
-    margin:0;
-    background-color: $wild-color;
-    color: $light;
+
+/* Place the navbar at the bottom of the page, and make it stick */
+.navbar {
+background-color: #333;
+overflow: hidden;
+position: fixed;
+left: 0;
+right: 0;
+bottom: 0;
+margin:0;
+width: 100%;
+}
+
+/* Style the links inside the navigation bar */
+.navbar a {
+float: left;
+display: block;
+color: #f2f2f2;
+text-align: center;
+padding: 15px;
+text-decoration: none;
+font-size: 1.2rem;
+}
+
+/* Change the color of links on hover */
+.navbar a:hover {
+background-color: #ddd;
+color: black;
+}
+
+/* Add a color to the active/current link */
+.navbar a.active {
+background-color: red;
+color: white;
 }
