--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -1,37 +1,110 @@
-@import 'variables.scss';
+  
+  /* helpers/accessibility.css */
+  
+  .invisible {
+    bottom: 2px;
+    position: absolute;
+    right: 18px;
+  }
+  
+  /* helpers/align.css */
+  
+  .align {
+    display: grid;
+    place-items: center;
+  }
+  
+  /* layout/base.css */
+  
+  :root {
+    --body-background-color: #82a8ee;
+    --body-color: #97adc6;
+  }
+  
+  body {
+    margin: 0;
+    min-block-size: 100vh;
+  }
+  
+  /* modules/anchor.css */
+  
+  a {
+    color: inherit;
+    outline: 0;
+  }
+  
+  /* modules/icon.css */
+  
+  .icons {
+    display: none;
+  }
+  
+  .icon {
+    block-size: 1em;
+    display: inline-block;
+    fill: currentcolor;
+    inline-size: 1em;
+    vertical-align: middle;
+  }
+  
+  .icon--2x {
+    font-size: 2rem;
+  }
+  
+  /* modules/image.css */
+  
+  svg {
+    max-inline-size: 100%;
+  }
+  
+  /* modules/navigation.css */
+  
+  :root {
+    --navigation-background-color: #f0f6ff;
+    --navigation-border-radius: 0.25em;
+  
+    --navigation-anchor-padding: 1.5em;
+  }
 
-
-/* Place the navbar at the bottom of the page, and make it stick */
-.navbar {
-background-color: #333;
-overflow: hidden;
-position: fixed;
-left: 0;
-right: 0;
-bottom: 0;
-margin:0;
-width: 100%;
-}
-
-/* Style the links inside the navigation bar */
-.navbar a {
-float: left;
-display: block;
-color: #f2f2f2;
-text-align: center;
-padding: 15px;
-text-decoration: none;
-font-size: 1.2rem;
-}
-
-/* Change the color of links on hover */
-.navbar a:hover {
-background-color: #ddd;
-color: black;
-}
-
-/* Add a color to the active/current link */
-.navbar a.active {
-background-color: red;
-color: white;
-}
+  
+  .navigation {
+    background-color: var(--navigation-background-color);
+    border-radius: var(--navigation-border-radius);
+    box-shadow: 0 0.5em 1em rgba(0, 0, 0, 0.3);
+    width: 100%;
+  }
+  
+  .navigation ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+  }
+  
+  .navigation a {
+    display: block;
+    padding: var(--navigation-anchor-padding);
+    position: relative;
+    text-decoration: none;
+  }
+  
+  .navigation a:focus::after,
+  .navigation a:hover::after {
+    opacity: 1;
+  }
+  
+  .navigation a::after {
+    block-size: 100%;
+    box-shadow: 0 0.5em 1em rgba(0, 0, 0, 0.3);
+    content: '';
+    inline-size: 100%;
+    left: 0;
+    opacity: 0;
+    position: absolute;
+    top: 0;
+    transition: opacity 0.3s;
+  }
+  
+  .navigation--inline ul {
+    display: flex;
+  }
+  
