--- a/templates/space/index.html.twig
+++ b/templates/space/index.html.twig
@@ -14,5 +14,8 @@
         </div>
     </div>
 {{ form_end(form) }}
+{% for space in spaces %}
 
+<p>{{ space.name }}</p>
+{% endfor %}
 {% endblock %}
