First Version of Navbar

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -1,110 +1,110 @@
-  
-  /* helpers/accessibility.css */
-  
-  .invisible {
-    bottom: 2px;
-    position: absolute;
-    right: 18px;
-  }
-  
-  /* helpers/align.css */
-  
-  .align {
-    display: grid;
-    place-items: center;
-  }
-  
-  /* layout/base.css */
-  
-  :root {
-    --body-background-color: #82a8ee;
-    --body-color: #97adc6;
-  }
-  
-  body {
-    margin: 0;
-    min-block-size: 100vh;
-  }
-  
-  /* modules/anchor.css */
-  
-  a {
-    color: inherit;
-    outline: 0;
-  }
-  
-  /* modules/icon.css */
-  
-  .icons {
-    display: none;
-  }
-  
-  .icon {
-    block-size: 1em;
-    display: inline-block;
-    fill: currentcolor;
-    inline-size: 1em;
-    vertical-align: middle;
-  }
-  
-  .icon--2x {
-    font-size: 2rem;
-  }
-  
-  /* modules/image.css */
-  
-  svg {
-    max-inline-size: 100%;
-  }
-  
-  /* modules/navigation.css */
-  
-  :root {
-    --navigation-background-color: #f0f6ff;
-    --navigation-border-radius: 0.25em;
-  
-    --navigation-anchor-padding: 1.5em;
-  }
 
-  
-  .navigation {
-    background-color: var(--navigation-background-color);
-    border-radius: var(--navigation-border-radius);
-    box-shadow: 0 0.5em 1em rgba(0, 0, 0, 0.3);
-    width: 100%;
-  }
-  
-  .navigation ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-  }
-  
-  .navigation a {
-    display: block;
-    padding: var(--navigation-anchor-padding);
-    position: relative;
-    text-decoration: none;
-  }
-  
-  .navigation a:focus::after,
-  .navigation a:hover::after {
-    opacity: 1;
-  }
-  
-  .navigation a::after {
-    block-size: 100%;
-    box-shadow: 0 0.5em 1em rgba(0, 0, 0, 0.3);
-    content: '';
-    inline-size: 100%;
-    left: 0;
-    opacity: 0;
-    position: absolute;
-    top: 0;
-    transition: opacity 0.3s;
-  }
-  
-  .navigation--inline ul {
-    display: flex;
-  }
-  
+/* helpers/accessibility.css */
+
+.invisible {
+bottom: 2px;
+position: absolute;
+display:flex;
+justify-content: space-around;
+padding-left: 1rem;
+}
+
+.invi
+/* helpers/align.css */
+
+.align {
+display: grid;
+place-items: center;
+}
+
+/* layout/base.css */
+
+:root {
+--body-background-color: #82a8ee;
+--body-color: #97adc6;
+}
+
+body {
+margin: 0;
+min-block-size: 100vh;
+}
+
+/* modules/anchor.css */
+
+a {
+color: inherit;
+outline: 0;
+}
+
+/* modules/icon.css */
+
+.icons {
+display: none;
+}
+
+.icon {
+block-size: 1em;
+display: inline-block;
+fill: currentcolor;
+inline-size: 1em;
+vertical-align: middle;
+}
+
+.icon--2x {
+font-size: 2rem;
+}
+
+/* modules/image.css */
+
+svg {
+max-inline-size: 100%;
+}
+
+/* modules/navigation.css */
+
+:root {
+--navigation-background-color: #f0f6ff;
+--navigation-border-radius: 0.25em;
+
+--navigation-anchor-padding: 1.5em;
+}
+
+
+.navigation {
+background-color: var(--navigation-background-color);
+border-radius: var(--navigation-border-radius);
+box-shadow: 0 0.5em 1em rgba(0, 0, 0, 0.3);
+width: 100%;
+bottom: 0;
+position: fixed;
+}
+
+.navigation ul {
+list-style: none;
+margin: 0;
+padding: 0;
+}
+
+.navigation a {
+display: block;
+padding: var(--navigation-anchor-padding);
+position: relative;
+text-decoration: none;
+}
+
+.navigation a:focus::after,
+.navigation a:hover::after {
+opacity: 1;
+}
+
+.navigation a::after {
+block-size: 100%;
+box-shadow: 0 0.5em 1em rgba(0, 0, 0, 0.3);
+inline-size: 100%;
+opacity: 0;
+transition: opacity 0.3s;
+}
+
+.navigation--inline ul {
+display: flex;
+}
