--- a/templates/_navbar.html.twig
+++ b/templates/_navbar.html.twig
@@ -7,7 +7,9 @@
           <svg class="icon icon--2x">
             <use xlink:href="#icon-home" />
           </svg>
-          <span class="invisible">Home</span>
+          <div class="invisible">
+          <span class="invisible">Accueil</span>
+        </div>
         </a>
       </li>
       <li>
@@ -15,7 +17,9 @@
           <svg class="icon icon--2x">
             <use xlink:href="#icon-search" />
           </svg>
-          <span class="invisible">Search</span>
+          <div class="invisible">
+        <span class="invisible">Louer</span>
+      </div>
         </a>
       </li>
       <li>
@@ -23,20 +27,22 @@
           <svg class="icon icon--2x">
             <use xlink:href="#icon-cart" />
           </svg>
-          <span class="invisible">Products</span>
-        </a>
+          <div class="invisible">
+        <span class="invisible">Publier</span>
+      </div>
+            </a>
       </li>
       <li>
         <a href="#">
           <svg class="icon icon--2x">
             <use xlink:href="#icon-user" />
           </svg>
-          <span class="invisible">Profile</span>
-        </a>
+          <div class="invisible">
+        <span class="invisible">Profil</span>
+      </div>        </a>
       </li>
     </ul>
   </nav>
-
   <svg xmlns="http://www.w3.org/2000/svg" class="icons">
     <symbol id="icon-cart" viewBox="0 0 92 92">
       <path d="M91.8 27.3l-10.7 33.7c-.8 2.4-2.9 4-5.4 4h-41.3c-2.4 0-4.7-1.5-5.5-3.7l-15.8-42.3h-9.1c-2.2 0-4-1.8-4-4s1.8-4 4-4h11.9c1.7 0 3.2 1.1 3.8 2.7l16.3 43.3h38l8.5-27h-47.1c-2.2 0-4-1.8-4-4s1.8-4 4-4h52.6c1.3 0 2.5.7 3.2 1.7.8 1 1 2.4.6 3.6zm-55.4 43c-1.7 0-3.4.7-4.6 1.9-1.2 1.2-1.9 2.9-1.9 4.6 0 1.7.7 3.4 1.9 4.6 1.2 1.2 2.9 1.9 4.6 1.9s3.4-.7 4.6-1.9c1.2-1.2 1.9-2.9 1.9-4.6 0-1.7-.7-3.4-1.9-4.6-1.2-1.2-2.9-1.9-4.6-1.9zm35.9 0c-1.7 0-3.4.7-4.6 1.9s-1.9 2.9-1.9 4.6c0 1.7.7 3.4 1.9 4.6 1.2 1.2 2.9 1.9 4.6 1.9 1.7 0 3.4-.7 4.6-1.9 1.2-1.2 1.9-2.9 1.9-4.6 0-1.7-.7-3.4-1.9-4.6s-2.9-1.9-4.6-1.9z" />
