Used prettier to format code

--- a/templates/_navbar.html.twig
+++ b/templates/_navbar.html.twig
@@ -8,8 +8,10 @@
             <use xlink:href="#icon-home" />
           </svg>
           <div class="invisible">
-          <span class="invisible">Accueil</span>
-        </div>
+            <span class="invisible">
+              Accueil
+            </span>
+          </div>
         </a>
       </li>
       <li>
@@ -18,8 +20,10 @@
             <use xlink:href="#icon-search" />
           </svg>
           <div class="invisible">
-        <span class="invisible">Louer</span>
-      </div>
+            <span class="invisible">
+              Louer
+            </span>
+          </div>
         </a>
       </li>
       <li>
@@ -28,9 +32,11 @@
             <use xlink:href="#icon-cart" />
           </svg>
           <div class="invisible">
-        <span class="invisible">Publier</span>
-      </div>
-            </a>
+            <span class="invisible">
+              Publier
+            </span>
+          </div>
+        </a>
       </li>
       <li>
         <a href="#">
@@ -38,8 +44,11 @@
             <use xlink:href="#icon-user" />
           </svg>
           <div class="invisible">
-        <span class="invisible">Profil</span>
-      </div>        </a>
+            <span class="invisible">
+              Profil
+            </span>
+          </div>
+        </a>
       </li>
     </ul>
   </nav>
