--- a/assets/styles/variables.scss
+++ b/assets/styles/variables.scss
@@ -2,12 +2,13 @@
     font-family: 'Actor';
     src: url('../fonts/Actor-Regular.ttf');
 }
+
 @font-face {
     font-family: 'Abhaya';
     src: url('../fonts/AbhayaLibre-Regular.ttf');
 }
 
 $color-white: #FAFAFA;
-$color-burgundy: #750208;
-$color-grey: #191919;
+$color-burgundy: #BD1110;
+$color-grey: #322E2A;
 $color-blue: #5271FF;
