Linked Navbar / Modify view for add space

--- a/templates/space/index.html.twig
+++ b/templates/space/index.html.twig
@@ -2,46 +2,54 @@
 
 {% block body %}
 
-<header class="header-home">
-    <div>
-        <img class="logo" src="{{ asset('build/images/logoMarcheConclu.png') }}"
-        width="160" height="160" alt="Marché Conclu"/>
-    </div>
-    <form class="navbar-form navbar-left" role="search">
-        <div class="form-group">
-            <input class="search" type="text" class="form-control" placeholder="Recherche">
+    <header class="header-home">
+        <div>
+            <img class="logo" src="{{ asset('build/images/logoMarcheConclu.png') }}" width="160" height="160" alt="Marché Conclu" />
         </div>
-    </form>
-    <div class="header-text">
-        <p>Un accélérateur de business,</p>
-        <p>créé par vous, pour vous.</p>
-    </div>
-</header>
-
-{{ form_start(form) }}
-    <div class="my-custom-class-for-errors">
-        {{ form_errors(form) }}
-    </div>
-
-    <div class="row">
-        <div class="col">
-            {{ form_row(form.location) }}
+        <form class="navbar-form navbar-left" role="search">
+            <div class="form-group">
+                <input class="search" type="text" class="form-control" placeholder="Recherche"></div>
+            </form>
+            <div class="header-text">
+                <p>
+                    Un accélérateur de business,
+                </p>
+                <p>
+                    créé par vous, pour vous.
+                </p>
+            </div>
+        </header>
+        {{ form_start(form) }}
+        <div class="my-custom-class-for-errors">
+            {{ form_errors(form) }}
         </div>
-        <div class="col" id="some-custom-id">
+        <div class="row">
+            <div class="col">
+                {{ form_row(form.location) }}
+            </div>
+            <div class="col" id="some-custom-id"></div>
         </div>
-    </div>
-{{ form_end(form) }}
-{% for space in spaces %}
-<figure class="offer">
-    <img class="image-offer" src="{{ asset('build/images/imageHome.svg') }}" height="160" alt="Marché Conclu"/>
-    <figcaption class="text-offer">
-        <ul>
-         <li>{{ space.name }}</li>
-         <li>{{ space.category }}</li>
-         <li>{{ space.surface }}</li>
-         </ul>
-    </figcaption>
-</figure>
-{% endfor %}
+        {{ form_end(form) }}
+        {% for space in spaces %}
+            <a href="{{ path("space_show", {id: space.id}) }}">
+                <figure class="offer">
+                    <img class="image-offer" src="{{ asset('build/images/imageHome.svg') }}" height="160" alt="Marché Conclu"/>
+                    <figcaption class="text-offer">
+                        <ul>
+                            <li>
+                                {{ space.name }}
+                            </li>
+                            <li>
+                                {{ space.category }}
+                            </li>
+                            <li>
+                                {{ space.surface }}
+                            </li>
+                        </ul>
+                    </figcaption>
+                </figure>
+            </a>
+        {% endfor %}
 
-{% endblock %}
+    {% endblock %}
+    
