--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -1,4 +1,5 @@
 @import "variables.scss";
+
 /* NAVBAR */
 .invisible {
     bottom: 2px;
@@ -96,6 +97,14 @@ svg {
     background-repeat: no-repeat;
 }
 
+.search_location {
+    font-size: 1rem;
+    padding: 0.5rem 2rem; 
+    text-align: center;
+    border-radius: 5%;
+    background-color: white;
+}
+
 .header-text {
     text-align: center;
 }
@@ -115,19 +124,18 @@ svg {
     object-fit: cover;
 }
 
-
 .cardcontent {
-  font-family: 'Work Sans', sans-serif;
-  font-weight: 100;
-  font-size: 0.75rem;
-  list-style-type: none;
-  padding: 0;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(2, 1fr);
-  grid-row-gap: 0.5rem;
-  justify-items: start;
-  align-items: start;
+    font-family: 'Work Sans', sans-serif;
+    font-weight: 100;
+    font-size: 0.75rem;
+    list-style-type: none;
+    padding: 0;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-row-gap: 0.5rem;
+    justify-items: start;
+    align-items: start;
 }
 
 /* END OF CARD */
