--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -1,30 +1,33 @@
+@import "variables.scss";
+
 /* NAVBAR */
+
 .invisible {
     bottom: 2px;
     position: absolute;
     display: flex;
     justify-content: space-around;
     padding-left: 0.7rem;
-  }
+}
 
 .align {
     display: grid;
     place-items: center;
-  }
+}
 
 body {
     margin: 0;
     min-block-size: 100vh;
-  }
+}
 
 a {
     color: inherit;
     outline: 0;
-  }
+}
 
 .icons {
     display: none;
-  }
+}
 
 .icon {
     block-size: 1em;
@@ -32,15 +35,15 @@ a {
     fill: currentcolor;
     inline-size: 1em;
     vertical-align: middle;
-  }
+}
 
 .icon--2x {
     font-size: 2rem;
-  }
+}
 
 svg {
     max-inline-size: 100%;
-  }
+}
 
 .navigation {
     background-color: #f0f6ff;
@@ -48,13 +51,13 @@ svg {
     width: 100%;
     bottom: 0;
     position: fixed;
-  }
+}
 
 .navigation ul {
     list-style: none;
     margin: 0;
     padding: 0;
-  }
+}
 
 .navigation a {
     padding: 1.5rem;
@@ -62,12 +65,12 @@ svg {
     padding: 1.5em;
     position: relative;
     text-decoration: none;
-  }
+}
 
 .navigation a:focus::after,
 .navigation a:hover::after {
     opacity: 1;
-  }
+}
 
 .navigation a::after {
     block-size: 100%;
@@ -75,28 +78,35 @@ svg {
     inline-size: 100%;
     opacity: 0;
     transition: opacity 0.3s;
-  }
+}
 
 .navigation--inline ul {
     display: flex;
-  }
+}
+
 
 /* END OF NAVBAR */
 
 .header-home {
+    height: 30vh;
     font-family: Abhaya;
     color: $color-white;
+    padding: 1rem 0;
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: space-between;
     align-items: center;
-    background-image: url("/assets/images/imageHome.svg");
+    text-align: center;
+    background-image: url("/assets/images/header.png");
     background-size: cover;
     background-repeat: no-repeat;
+    font-size: 1.5rem;
+    text-shadow: 1px 1px 1px #534f4c;
 }
 
-.header-text {
-    text-align: center;
+.logo-title {
+    color: $color-white;
+    margin: 0;
 }
 
 .offer {
