--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -104,27 +104,26 @@ svg {
 .offer {
     display: flex;
     flex-direction: column;
-    padding: 1px;
-}
-
-.offer:hover {
-    padding: initial;
+    border: 0.2rem solid $color-burgundy;
+    border-radius: 1rem;
+    color: $color-burgundy;
+    margin: 1rem;
 }
 
 .image-offer {
     object-fit: cover;
+    border-radius: 5% 5% 0 0;
 }
-
 
 .cardcontent {
   font-family: 'Work Sans', sans-serif;
   font-weight: 100;
   font-size: 0.75rem;
   list-style-type: none;
-  padding: 0;
+  padding-left: 1rem;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(2, 1fr);
+  grid-template-rows: auto;
   grid-row-gap: 0.5rem;
   justify-items: start;
   align-items: start;
