--- a/templates/space/new.html.twig
+++ b/templates/space/new.html.twig
@@ -3,7 +3,7 @@
     New Space
 {% endblock %}
 {% block body %}
-    <h1>
+    <h1 class="add-space-title">
         Créer un nouvel espace
     </h1>
     <div class="form-container">
