--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -92,7 +92,6 @@ svg {
 /* END OF NAVBAR */
 
 .header-home {
-    height: 30vh;
     font-family: Abhaya;
     color: $color-white;
     padding: 1rem 0;
@@ -113,19 +112,19 @@ svg {
     margin: 0;
 }
 
-.search_location {
-    font-size: 1rem;
-    padding: 0.5rem 2rem;
+.form-search {
+    padding-left: 5rem;
+    padding-right: 5rem;
     text-align: center;
-    border-radius: 5%;
-    background-color: $color-white;
+    border: 1px solid #ccc;
+    border-radius: 4px; /* Rounded borders */
+    box-sizing: border-box; /* Make sure that padding and width stays in place */
 }
 
 .space-pitch {
     padding: 1rem 0;
     font-size: 1.3rem;
 }
-
 
 /* START OF CARD */
 
@@ -162,6 +161,52 @@ svg {
 
 
 /* Add Space Form */
+#space {
+    display: flex;
+}
+
+#space-count {
+    font-weight: bolder;
+}
+
+.space-count {
+    font-size: 1.2rem;
+}
+
+/* Style inputs with type="text", select elements and textareas */
+input[type=text], select, textarea, .form-content {
+    width: 100%; /* Full width */
+    padding: 12px; /* Some padding */ 
+    border: 1px solid #ccc; /* Gray border */
+    border-radius: 4px; /* Rounded borders */
+    box-sizing: border-box; /* Make sure that padding and width stays in place */
+    margin-top: 6px; /* Add a top margin */
+    margin-bottom: 16px; /* Bottom margin */
+    resize: vertical /* Allow the user to vertically resize the textarea (not horizontally) */
+}
+
+/* Style the submit button with a specific background color etc */
+input[type=submit], .form-submit {
+    background-color: $color-burgundy;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+
+/* Add a background color and some padding around the form */
+.container {
+    border-radius: 5px;
+    background-color: #f2f2f2;
+    padding: 20px;
+}
+
+.add-space-title {
+    font-size: 2rem;
+    text-align: center;
+}
 
 .form-container {
     display: flex;
