--- a/templates/space/index.html.twig
+++ b/templates/space/index.html.twig
@@ -2,14 +2,12 @@
 
 {% block body %}
     <header class="header-home">
-        <div>
             <img class="logo" src="{{ asset('build/images/logo.png') }}" width="60" alt="Marché Conclu" />
             <p class="logo-title">
                 Marché
                 <br>
                     C O N C L U
                 </p>
-            </div>
             {{ form_start(form) }}
             <div class="my-custom-class-for-errors">
                 {{ form_errors(form) }}
@@ -34,14 +32,10 @@
             </p>
         </div>
         {% if spaces %}
-            {% set space_count = 0 %}
-            {% for space in spaces %}
-                {% set space_count = space_count + 1 %}
-            {% endfor %}
             {% if location %}
                 <p class="space-count">
                     <span id="space-count">
-                        {{ space_count }}
+                        {{ spaces|length }}
                     </span>
                     bureaux ont été trouvés à
                     {{ location }}
