--- a/templates/space/_delete_form.html.twig
+++ b/templates/space/_delete_form.html.twig
@@ -1,4 +1,4 @@
-<form method="post" action="{{ path('space_delete', {'id': space.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+<form method="post" action="{{ path('space_delete', {'id': space.id}) }}" onsubmit="return confirm('Êtes vous sûr de vouloir supprimer cet espace ?');">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ space.id) }}">
-    <button class="btn">Delete</button>
+    <button class="btn form-submit">Supprimer votre annonce</button>
 </form>
