--- a/templates/space/show.html.twig
+++ b/templates/space/show.html.twig
@@ -3,44 +3,42 @@
 {% block title %}Space{% endblock %}
 
 {% block body %}
-    <h1>Space</h1>
-
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ space.id }}</td>
-            </tr>
-            <tr>
-                <th>Name</th>
-                <td>{{ space.name }}</td>
-            </tr>
-            <tr>
-                <th>Photos</th>
-                <td>{{ space.photos }}</td>
-            </tr>
-            <tr>
-                <th>Surface</th>
-                <td>{{ space.surface }}</td>
-            </tr>
-            <tr>
-                <th>Category</th>
-                <td>{{ space.category }}</td>
-            </tr>
-            <tr>
-                <th>Capacity</th>
-                <td>{{ space.capacity }}</td>
-            </tr>
-            <tr>
-                <th>Location</th>
-                <td>{{ space.location }}</td>
-            </tr>
-        </tbody>
-    </table>
-
-    <a href="{{ path('space_index') }}">back to list</a>
-
-    <a href="{{ path('space_edit', {'id': space.id}) }}">edit</a>
-
+    <h1 class="show-title">Accueil / {{ space.location }} / {{ space.category }} </h1>
+        <img class="show-image-offer" src="{{ asset('build/images/imageHome.svg') }}" height="160" alt="Marché Conclu" />
+        <figcaption class="text-offer">
+            <ul class="show-cardcontent">
+            <li class="spacename">
+            {{ space.name }}
+        </li>
+        <li class="spacecategory">
+        {{ space.category }}
+    </li>
+        <li class="spacelocation">
+         6 avenue de Champagne, {{ space.location }}, 51200
+        </li>
+        <li class="spacesurface">
+                    {{ space.surface }}
+                    m² - {{ space.capacity }}
+                    postes de travail
+                </li>
+                <li class="show-spaceprice">
+                    <span style="font-weight: bolder; font-size: 1rem">{{ random(50, 250) }}
+            € </span>/jour
+                </li>
+            </ul>
+        </figcaption>
+    </figure>
+<div class="mapouter">
+<div class="gmap_canvas"><iframe width="350" height="150" id="gmap_canvas" src="https://maps.google.com/maps?q={{ space.location }}&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+</div>
+</div>
+<div class="form-container">
+    <div class="div-btn">
+    <a class="space-form-submit" href="{{ path('space_index') }}">Retourner sur la liste des espaces</a>
+    </div>
+    <div class="div-btn">
+    <a class="form-submit" href="{{ path('space_edit', {'id': space.id}) }}">Modifier votre annonce</a>
+</div>
+    </div>
     {{ include('space/_delete_form.html.twig') }}
 {% endblock %}
